AES-256-GCM 암호화, DB보안 컬럼 추가, 비밀번호 재사용 방지, CDD 테이블&로직, Watch List, Mock C